--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -31,19 +31,24 @@ jobs:
           --alluredir=allure-results \
           --video=retain-on-failure \
           --tracing=retain-on-failure
+        continue-on-error: true
 
       - name: 📦 Install Allure CLI
+        if: always()
         run: npm install -g allure-commandline
 
       - name: 📝 Generate Allure HTML report
+        if: always()
         run: allure generate allure-results --clean -o allure-report
 
       - name: 📁 Prepare GitHub Pages folder
+        if: always()
         run: |
           mkdir public
           mv allure-report public/
 
       - name: 🚀 Deploy report to GitHub Pages
+        if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
